--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
   </head>
   <body>
-    <div class="card_layout">
+    <main class="card_layout">
       <h2>Our Pricing</h2>
       <div class="span">
         <span>Annually</span>
@@ -46,8 +46,8 @@
       <div class="container">
         <div class="first_card">
           <h3>Basic</h3>
-          <p class="amount" id="one">&dollar;19.99</p>
-          <p class="amount annually" id="two">&dollar;199.99</p>
+          <p class="amount annually" id="one">&dollar;19.99</p>
+          <p class="amount" id="two">&dollar;199.99</p>
           <div class="vl"></div>
           <p>500 GB Storage</p>
           <div class="vl"></div>
@@ -59,8 +59,8 @@
         </div>
         <div class="second_card">
           <h3>Professional</h3>
-          <p class="amount">&dollar;24.99</p>
-          <p class="annually amount">&dollar;249.99</p>
+          <p class="amount annually" id="three">&dollar;24.99</p>
+          <p class="amount" id="four">&dollar;249.99</p>
           <div class="vl"></div>
           <p>1 TB Storage</p>
           <div class="vl"></div>
@@ -72,8 +72,8 @@
         </div>
         <div class="first_card">
           <h3>Master</h3>
-          <p class="amount">&dollar;39.99</p>
-          <p class="annually amount">&dollar;399.99</p>
+          <p class="amount annually" id="five">&dollar;39.99</p>
+          <p class="amount" id="six">&dollar;399.99</p>
           <div class="vl"></div>
           <p>2 TB Storage</p>
           <div class="vl"></div>
@@ -84,16 +84,16 @@
           <button>LEARN MORE</button>
         </div>
       </div>
-    </div>
+    </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by
       <a href="https://github.com/ijklmopffs" target="_blank">Nuel Elekwachi</a
       >.
-    </div>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
